made code generic so cube sizes other than 3x3x3 are supported